--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="fwtitle">
 <div id="toptitle">
-<h1>Ahmed El Alaoui</h1>
+<h1>Yaodong Yu</h1>
 </div>
 </div>
 <div id="layout-content">
