--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Advances in Neural Information Processing Systems (NIPS) 28, 2015. [<a href="htt
 <h2>Ph.D. Thesis</h2>
 <ul>
 <li><p><i>Detection limits and fluctuation results in some spiked random matrix models and pooling of discrete data</i>. [<a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2018/EECS-2018-31.html">link</a>]<br />  
-Ahmed El Alaoui.<br />
+Yaodong Yu.<br />
 Ph.D. Thesis, Department of Electrical Engineering and Computer Sciences, University of California, Berkeley, 2018.  </p>
 </li>
 </ul>
