--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 <div id="layout-content">
 <table class="imgtable"><tr><td>
 <img src="photo_me.jpg" alt="photo_me" width="300px" height="200px" />&nbsp;</td>
-<td align="left"><p>Postdoctoral Researcher<br />
-Department of <a href="https://ee.stanford.edu/">Electrical Engineering</a>, Stanford university.</p>
-<p>239 Packard Bldg, Stanford, CA 94304.<br />  
-Email me at elalaoui at stanford dot edu</p>
-<p>Hosted by <a href="http://web.stanford.edu/~montanar/">Andrea Montanari</a>.
+<td align="left"><p>Graduate Student<br />
+<a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia.</p>
+<p>Rice Hall, Charlottesville, VA 22904.<br />  
+Email me at yy8ms AT virginia DOT edu</p>
 
 </p>
 </td></tr></table>
