--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <td align="left"><p>Graduate Student<br />
 <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia.</p>
 <p>Rice Hall, Charlottesville, VA 22904.<br />  
-Email me at yy8ms AT virginia DOT edu</p>
+Email: yy8ms AT virginia DOT edu</p>.
 
 </p>
 </td></tr></table>
@@ -37,66 +37,6 @@ Submitted 2018. [<a href="https://arxiv.org/abs/1806.09588">arxiv</a>].<br /></p
 <li><p><i>Detection limits in the high-dimensional spiked rectangular model</i>.<br />
 A. El Alaoui, M. I. Jordan.<br />
 31th Annual Conference on Learning Theory (COLT), PMLR 75:410-438, 2018. [<a href="http://proceedings.mlr.press/v75/el-alaoui18a.html">proc.</a>, <a href="https://arxiv.org/abs/1802.07309">arxiv</a>].<br /></p>
-</li>
-</ul>
-<ul>
-<li><p><i>Tight query complexity lower bounds for PCA via finite sample deformed Wigner law</i>.<br /> 
-M. Simchowitz, A. El Alaoui, B. Recht.<br /> 
-50th Annual Symposium on the Theory of Computing (STOC) 2018. [<a href="http://delivery.acm.org/10.1145/3190000/3188796/stoc18main-p106-p.pdf?ip=128.32.132.70&amp;id=3188796&amp;acc=OPENTOC&amp;key=CA367851C7E3CE77%2E3158474DDFAA3F10%2E4D4702B0C3E38B35%2E9F04A3A78F7D3B8D&amp;__acm__=1531453218_32c9b26740a32b848785ce3da97d5186">proc.</a>, <a href="https://arxiv.org/abs/1804.01221">arxiv</a>]. <br />
-Here’s an <a href="https://arxiv.org/abs/1704.04548">earlier version</a> (not intended for publication) with slightly suboptimal results.</p>
-</li>
-</ul>
-<ul>
-<li><p><i>Estimation in the spiked Wigner model: A short proof of the replica formula</i>.<br />
-A. El Alaoui, F. Krzakala.<br />
-IEEE International Symposium on Information Theory (ISIT) 2018. [<a href="https://arxiv.org/abs/1801.01593">arxiv</a>].<br /> 
-To appear in the proceedings.<br /></p>
-</li>
-</ul>
-<ul>
-<li><p><i>Finite-size corrections and likelihood ratio fluctuations in the spiked Wigner model</i>.<br /> 
-A. El Alaoui, F. Krzakala, M. I. Jordan.<br />
-Preprint 2017. [<a href="https://arxiv.org/abs/1710.02903">arxiv</a>]. (Working paper; will be substantially altered.)<br /></p>
-</li>
-</ul>
-<ul>
-<li><p><i>Decoding from pooled data: Phase transitions of message passing</i>.<br /> 
-A. El Alaoui, A. Ramdas, F. Krzakala, L. Zdeborová, M. I. Jordan.<br />
-To appear in IEEE Transactions on Information Theory 2018.<br />
-Conf. version in IEEE International Symposium on Information Theory (ISIT) 2017.
-[<a href="http://ieeexplore.ieee.org/document/8007036/?tp=&amp;arnumber=8007036&amp;refinements%3D4219344843%26filter%3DAND(p_IS_Number:8006474),">proc.</a>, <a href="https://arxiv.org/abs/1702.02279">arxiv</a>].<br /></p>
-</li>
-</ul>
-<ul>
-<li><p><i>Decoding from pooled data: Sharp information-theoretic bounds</i>. <br />
-A. El Alaoui, A. Ramdas, F. Krzakala, L. Zdeborová, M. I. Jordan. <br />
-Submitted 2016 [<a href="https://arxiv.org/abs/1611.09981">arxiv</a>].<br /></p>
-</li>
-</ul>
-<ul>
-<li><p><i>Asymptotic behavior of Lp-based Laplacian regularization in semi-supervised learning</i>.<br />
-A. El Alaoui, X. Cheng, A. Ramdas, M. J. Wainwright, M. I. Jordan.<br />
-29th Annual Conference on Learning Theory (COLT), PMLR 49:879-906, 2016. [<a href="http://jmlr.csail.mit.edu/proceedings/papers/v49/elalaoui16.html">proc.</a>, <a href="http://arxiv.org/abs/1603.00564">arxiv</a>].<br /> </p>
-</li>
-</ul>
-<ul>
-<li><p><i>Fast randomized kernel ridge regression with statistical guarantees</i>. <br />
-A. El Alaoui, M. W. Mahoney.<br />
-Advances in Neural Information Processing Systems (NIPS) 28, 2015. [<a href="https://papers.nips.cc/paper/5716-fast-randomized-kernel-ridge-regression-with-statistical-guarantees">proc.</a>, <a href="http://arxiv.org/abs/1411.0306">arxiv</a>].<br /></p>
-</li>
-</ul>
-<h2>Ph.D. Thesis</h2>
-<ul>
-<li><p><i>Detection limits and fluctuation results in some spiked random matrix models and pooling of discrete data</i>. [<a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2018/EECS-2018-31.html">link</a>]<br />  
-Yaodong Yu.<br />
-Ph.D. Thesis, Department of Electrical Engineering and Computer Sciences, University of California, Berkeley, 2018.  </p>
-</li>
-</ul>
-<h2>Teaching</h2>
-<ul>
-<li><p><a href="http://people.eecs.berkeley.edu/~jordan/courses/174-spring15/">CS174</a> Combinatorics and Discrete Probability (UC Berkeley, spring 2015).</p>
-</li>
-<li><p><a href="https://people.eecs.berkeley.edu/~jordan/courses/210B-spring17/">STAT210B</a> Theoretical Statistics, part B (UC Berkeley, spring 2017).</p>
 </li>
 </ul>
 <h2>About me</h2>
