--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <td align="left"><p>Graduate Student<br />
 <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia.</p>
 <p>Rice Hall, Charlottesville, VA 22904.<br />  
-Email: yy8ms AT virginia DOT edu</p>.
+Email: yy8ms AT virginia DOT edu</a>.
+</p>
 <h2>About me</h2>
 <p>I recently obtained by PhD in <a href="http://www.eecs.berkeley.edu/">Electrical Engineering and Computer Sciences</a> from the University of California at Berkeley, under the supervision of <a href="http://www.cs.berkeley.edu/~jordan/">Michael I. Jordan</a>. I did my master's at Ecole Normale Supérieure and my undergrad at Ecole Polytechnique. I wrote my master's dissertation on probabilistic record linkage while working at Ecole des Ponts with <a href="http://imagine.enpc.fr/~obozinsg/">Guillaume Obozinski</a>.</p>
 <ul>
