--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <p>Rice Hall, Charlottesville, VA 22904.<br />  
 Email: yy8ms AT virginia DOT edu</a>.
 </p>
+</td></tr></table>
 <h2>About me</h2>
 <p>I recently obtained by PhD in <a href="http://www.eecs.berkeley.edu/">Electrical Engineering and Computer Sciences</a> from the University of California at Berkeley, under the supervision of <a href="http://www.cs.berkeley.edu/~jordan/">Michael I. Jordan</a>. I did my master's at Ecole Normale Supérieure and my undergrad at Ecole Polytechnique. I wrote my master's dissertation on probabilistic record linkage while working at Ecole des Ponts with <a href="http://imagine.enpc.fr/~obozinsg/">Guillaume Obozinski</a>.</p>
 <ul>
