--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@ Email: yy8ms AT virginia DOT edu</a>.
 </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I recently obtained by PhD in <a href="http://www.eecs.berkeley.edu/">Electrical Engineering and Computer Sciences</a> from the University of California at Berkeley, under the supervision of <a href="http://www.cs.berkeley.edu/~jordan/">Michael I. Jordan</a>. I did my master's at Ecole Normale Supérieure and my undergrad at Ecole Polytechnique. I wrote my master's dissertation on probabilistic record linkage while working at Ecole des Ponts with <a href="http://imagine.enpc.fr/~obozinsg/">Guillaume Obozinski</a>.</p>
+<p>I am a graduate student in <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia. In fall 2015, I did an internship at Blender Lab, mainly under the supervision of Prof. Heng Ji. I obtained my bachelor degree in computer science from Zhejiang University, China.
+</p>
 <ul>
 <li><p>Ph.D. Electrical Engineering and Computer Sciences, UC Berkeley, 2018.</p>
 </li>
