--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Email: yy8ms AT virginia DOT edu</a>.
 </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a graduate student in <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia. In fall 2015, I did an internship at Blender Lab, mainly under the supervision of Prof. Heng Ji. I obtained my bachelor degree in computer science from Zhejiang University, China.
+<p>I am a graduate student in <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia. I earned my B.S. from <a href="http://math.nju.edu.cn">Department of Mathematics</a> at <a href="https://www.nju.edu.cn/EN/">Nanjing University</a> in 2015.
 </p>
 <ul>
 <li><p>Ph.D. Electrical Engineering and Computer Sciences, UC Berkeley, 2018.</p>
