--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Email: yy8ms AT virginia DOT edu</a>.
 </td></tr></table>
 <h2>About me</h2>
 <p>I am a graduate student in <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia. I earned my B.S. from <a href="http://math.nju.edu.cn">Department of Mathematics</a> at Nanjing University in 2015. Previously, I worked with  <a href="http://web.cs.ucla.edu/~qgu/">Quanqaun Gu</a> and <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a>.
+	My research interests broadly include topics in machine learning and optimization.
 </p>
 </td></tr></table>
 <h2>Research interests</h2>
