--- a/index.html
+++ b/index.html
@@ -24,24 +24,19 @@ Email: yy8ms AT virginia DOT edu</a>.
 </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a graduate student in <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia. I earned my B.S. from <a href="http://math.nju.edu.cn">Department of Mathematics</a> at Nanjing University in 2015. Previously, I worked with  <a href="http://web.cs.ucla.edu/~qgu/">Quanqaun Gu</a> and <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a>.
-	My research interests broadly include topics in machine learning and optimization.
-</p>
-</td></tr></table>
-<h2>Research interests</h2>
-<p>I am broadly interested in statistics, probability, optimization, and applications in machine learning. The questions that drive my research are the fundamental limits of extracting information from noisy data, and the algorithmic feasibility considerations surrounding this task. 
+<p>I am a graduate student in <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia. I earned my B.S. from <a href="http://math.nju.edu.cn">Department of Mathematics</a> at Nanjing University in 2015. Previously, I worked with  <a href="http://web.cs.ucla.edu/~qgu/">Quanqaun Gu</a> and <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a>. My research interests broadly include topics in machine learning and optimization.
 </p>
 <h2>Papers</h2>
 <ul>
-<li><p><i>Fundamental limits of detection in the spiked Wigner model</i>.<br /> 
-A. El Alaoui, F. Krzakala, M. I. Jordan.<br />
-Submitted 2018. [<a href="https://arxiv.org/abs/1806.09588">arxiv</a>].<br /></p>
+<li><p><i>Third-order Smoothness Helps: Even Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
+Yaodong Yu*, Pan Xu*, Quanquan Gu (*: equal contribution).<br />
+In Proc. of the 31st Conference on Advances in Neural Information Processing Systems (NIPS'2018), Montréal, Canada, 2018. [<a href="https://arxiv.org/abs/1712.06585">arxiv</a>].<br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>Detection limits in the high-dimensional spiked rectangular model</i>.<br />
 A. El Alaoui, M. I. Jordan.<br />
-31th Annual Conference on Learning Theory (COLT), PMLR 75:410-438, 2018. [<a href="http://proceedings.mlr.press/v75/el-alaoui18a.html">proc.</a>, <a href="https://arxiv.org/abs/1802.07309">arxiv</a>].<br /></p>
+31th Annual Conference on Learning Theory (COLT), PMLR 75:410-438, 2018. [<a href="http://proceedings.mlr.press/v75/el-alaoui18a.html">proc.</a>, <a href="https://arxiv.org/abs/1712.06585">arxiv</a>].<br /></p>
 </li>
 </ul>
 
