--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@ Email: yy8ms AT virginia DOT edu</a>.
 <h2>Papers</h2>
 <ul>
 <li><p><i>Third-order Smoothness Helps: Even Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
-Yaodong Yu*, Pan Xu*, Quanquan Gu (*: equal contribution).<br />
+<b>Yaodong Yu</b>*, Pan Xu*, Quanquan Gu (*: equal contribution).<br />
 In Proc. of the 31st Conference on Advances in Neural Information Processing Systems (NIPS'2018), Montréal, Canada, 2018. [<a href="https://arxiv.org/abs/1712.06585">arxiv</a>].<br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>A Primal-Dual Analysis of Global Optimality in Nonconvex Low-Rank Matrix Recovery</i>.<br /> 
-Xiao Zhang*, Lingxiao Wang*, Yaodong Yu and Quanquan Gu (*: equal contribution).<br />
+Xiao Zhang*, Lingxiao Wang*, <b>Yaodong Yu</b> and Quanquan Gu (*: equal contribution).<br />
 In Proc. of the 35th International Conference on Machine Learning (ICML), Stockholm, Sweden, 2018. [<a href="http://proceedings.mlr.press/v80/zhang18m.html">Link</a>] [<a href="http://proceedings.mlr.press/v80/zhang18m/zhang18m.pdf">PDF</a>].<br /></p>
 </li>
 </ul>
