--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@ Email: yy8ms AT virginia DOT edu</a>.
 <ul>
 <li><p><i>Third-order Smoothness Helps: Even Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
 <b>Yaodong Yu</b>*, Pan Xu*, Quanquan Gu (*: equal contribution).<br />
-In Proc. of the 31st Conference on Advances in Neural Information Processing Systems (NIPS'2018), Montréal, Canada, 2018. [<a href="https://arxiv.org/abs/1712.06585">arxiv</a>].<br /></p>
+In Proc. of the 31st Conference on Advances in Neural Information Processing Systems (NIPS-2018), Montréal, Canada, 2018. [<a href="https://arxiv.org/abs/1712.06585">arxiv</a>].<br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>A Primal-Dual Analysis of Global Optimality in Nonconvex Low-Rank Matrix Recovery</i>.<br /> 
 Xiao Zhang*, Lingxiao Wang*, <b>Yaodong Yu</b> and Quanquan Gu (*: equal contribution).<br />
-In Proc. of the 35th International Conference on Machine Learning (ICML), Stockholm, Sweden, 2018. [<a href="http://proceedings.mlr.press/v80/zhang18m.html">Link</a>] [<a href="http://proceedings.mlr.press/v80/zhang18m/zhang18m.pdf">PDF</a>].<br /></p>
+In Proc. of the 35th International Conference on Machine Learning (ICML-2018), Stockholm, Sweden, 2018. [<a href="http://proceedings.mlr.press/v80/zhang18m.html">Link</a>] [<a href="http://proceedings.mlr.press/v80/zhang18m/zhang18m.pdf">PDF</a>].<br /></p>
 </li>
 </ul>
 <ul>
-<li><p><i>Third-order Smoothness Helps: Even Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
-Yaodong Yu*, Pan Xu*, Quanquan Gu (*: equal contribution).<br />
-In Proc. of the 31st Conference on Advances in Neural Information Processing Systems (NIPS'2018), Montréal, Canada, 2018. [<a href="https://arxiv.org/abs/1712.06585">arxiv</a>].<br /></p>
+<li><p><i>Data Poisoning Attacks on Multi-Task Relationship Learning</i>.<br /> 
+Mengchen Zhao, Bo An, Yaodong Yu, Sulin Liu and Sinno Jialin Pan.<br />
+In Proc. of the 32nd AAAI Conference on Artificial Intelligence (AAAI-18). New Orleans, LA, USA, 2018. [<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16073">Link</a>] [<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16073/16778">PDF</a>].<br /></p>
 </li>
 </ul>
 <ul>
