--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Email: yy8ms AT virginia DOT edu</a>.
 </p>
 <h2>Papers</h2>
 <ul>
-<li><p><i>Third-order Smoothness Helps: Even Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
+<li><p><i>Third-order Smoothness Helps: Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
 <b>Yaodong Yu</b>*, Pan Xu*, Quanquan Gu (*: equal contribution).<br />
 In Proc. of the 31st Conference on Advances in Neural Information Processing Systems (NIPS-2018), Montréal, Canada, 2018. [<a href="https://arxiv.org/abs/1712.06585">arxiv</a>]<br /></p>
 </li>
