--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@ In Proc. of the 35th International Conference on Machine Learning (ICML'2018), S
 <ul>
 <li><p><i>Data Poisoning Attacks on Multi-Task Relationship Learning</i>.<br /> 
 Mengchen Zhao, Bo An, <b>Yaodong Yu</b>, Sulin Liu and Sinno Jialin Pan.<br />
-In Proc. of the 32nd AAAI Conference on Artificial Intelligence (AAAI'2018). New Orleans, Louisiana, USA, 2018. [<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16073">Link</a>] [<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16073/16778">PDF</a>]<br /></p>
+In Proc. of the 32nd AAAI Conference on Artificial Intelligence (AAAI'2018), New Orleans, Louisiana, USA, 2018. [<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16073">Link</a>] [<a href="https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/16073/16778">PDF</a>]<br /></p>
 </li>
 </ul>
 <ul>
 <li><p><i>Communication-Efficient Distributed Primal-Dual Algorithm for Saddle Point Problems</i>.<br /> 
 <b>Yaodong Yu</b>*, Sulin Liu* and Sinno Jialin Pan (*: equal contribution).<br />
-In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2017). Sydney, Australia, 2017. [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">Link</a>] [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">PDF</a>]<br /></p>
+In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2017), Sydney, Australia, 2017. [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">Link</a>] [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">PDF</a>]<br /></p>
 </li>
 </ul>
 
