--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@ Email: yy8ms AT virginia DOT edu</a>.
 <p>I am a graduate student in <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia. I earned my B.S. from <a href="http://math.nju.edu.cn">Department of Mathematics</a> at Nanjing University in 2015. Previously, I worked with  <a href="http://web.cs.ucla.edu/~qgu/">Quanqaun Gu</a> and <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a>. My research interests broadly include topics in machine learning and optimization.
 </p>
 <h2>Publications</h2>
-<p><h3> Preprints</h3></p> 
+<p><h3>Preprints</h3></p> 
 </div>
 <ul>
-<li> <b>Finding Local Minima via Stochastic Nested Variance Reduction</b> [<a href="https://arxiv.org/abs/1806.08782">ArXiv</a>]<br>
-Dongruo Zhou, <b>Pan Xu</b>, Quanquan Gu, <font size="3" color = "gray">arXiv:1806.08782, 2018.</font><br>
-</li><br>
-<li> <b>Communication-efficient Distributed Estimation and Inference for Transelliptical Graphical Models</b> [<a href="https://arxiv.org/abs/1612.09297">ArXiv</a>]<br>
-<b>Pan Xu</b>, Lu Tian, Quanquan Gu, <font size="3" color = "gray">arXiv:1612.09297, 2016.</font><br>
-</li><br>
+<li><p><i>Saving Gradient and Negative Curvature Computations: Finding Local Minima More Efficiently</i>.<br /> 
+<b>Yaodong Yu</b>*, Difan Zou* and Quanquan Gu (*: equal contribution). arXiv:1712.03950, 2017. [<a href="https://arxiv.org/abs/1712.03950">arXiv</a>]<br /></p>
 </li>
 </ul>
+<ul>
+<li><p><i>Learning One-hidden-layer ReLU Networks via Gradient Descent</i>.<br /> 
+Xiao Zhang*, <b>Yaodong Yu</b>*, Lingxiao Wang* and Quanquan Gu (*: equal contribution). arXiv:1806.07808, 2018. [<a href="https://arxiv.org/abs/1806.07808">arXiv</a>]<br /></p>
+</li>
+</ul>
+<p><h3>Conference Proceedings</h3></p> 
+</div>
 <ul>
 <li><p><i>Third-order Smoothness Helps: Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
 <b>Yaodong Yu</b>*, Pan Xu*, Quanquan Gu (*: equal contribution).<br />
