--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@ Email: yy8ms AT virginia DOT edu</a>.
 <h2>About me</h2>
 <p>I am a graduate student in <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia. I earned my B.S. from <a href="http://math.nju.edu.cn">Department of Mathematics</a> at Nanjing University in 2015. Previously, I worked with  <a href="http://web.cs.ucla.edu/~qgu/">Quanqaun Gu</a> at University of Virginia, and <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a> at Nanyang Technological University. My research interests broadly include topics in machine learning and optimization.
 </p>
+
+
+</p>
+</li>
+</ul>
+<h2>Professional Experiences</h2>
+<ul>
+<li><p><b>Research Engineer</b>, <a href="https://www.isem.nus.edu.sg/">Dept. ISEM</a>, <a href="http://www.nus.edu.sg/">NUS</a>, Singapore, Dec. 2017 &ndash; Aug. 2018<br />
+Supervisors: <a href="https://www.isem.nus.edu.sg/staff/haskell/">Prof. William B. Haskell</a> and <a href="https://www.ece.nus.edu.sg/stfpage/vtan/index.htm">Prof. Vincent Y. F. Tan</a> </p>
+</li>
+<li><p><b>Research Engineer</b>, <a href="https://www.ece.nus.edu.sg/">Dept. of ECE</a> and <a href="https://www.isem.nus.edu.sg/">Dept. ISEM</a>, <a href="http://www.nus.edu.sg/">NUS</a>, Singapore, Sep. 2016 &ndash; Nov. 2017<br />
+Supervisors: <a href="https://www.ece.nus.edu.sg/stfpage/vtan/index.htm">Prof. Vincent Y. F. Tan</a> and <a href="https://www.isem.nus.edu.sg/staff/haskell/">Prof. William B. Haskell</a></p>
+</li>
+<li><p><b>Research Intern</b>, <a href="http://lions.epfl.ch/home/">Laboratory for Information and Inference Systems (LIONS)</a>, <a href="https://www.epfl.ch/">EPFL</a>, Switzerland, Jun. 2017 &ndash; Aug. 2017<br />
+Supervisor: <a href="http://lions.epfl.ch/volkan.cevher/">Prof. Volkan Cevher</a></p>
+</li>
+<li><p><b>Research Engineer</b>, <a href="https://www.ece.nus.edu.sg/">Dept. of ECE</a>, <a href="http://www.nus.edu.sg/">NUS</a>, Singapore, Jul. 2015 &ndash; Sep. 2016<br />
+Supervisors: <a href="https://www.ece.nus.edu.sg/stfpage/vtan/index.htm">Prof. Vincent Y. F. Tan</a> and <a href="https://www.isye.gatech.edu/users/huan-xu">Prof. Huan Xu</a></p>
+</li>
+<li><p><b>Research Intern</b>, <a href="http://www.i2r.a-star.edu.sg/hlt/">Department of Human Language Technology</a>, <a href="http://www.i2r.a-star.edu.sg/">Institute for Infocomm Research</a>, Singapore, May 2013 &ndash; Nov. 2013<br />
+Supervisors: Dr. Dong-Yan Huang and Dr. Yvonne S. W. Lee </p>
+</li>
+</ul>
+
+
+
 <h2>Publications</h2>
 
 <h3>Preprints</h3>
