--- a/index.html
+++ b/index.html
@@ -28,30 +28,6 @@ Email: yy8ms AT virginia DOT edu</a>.
 </p>
 
 
-</p>
-</li>
-</ul>
-<h2>Professional Experiences</h2>
-<ul>
-<li><p><b>Research Engineer</b>, <a href="https://www.isem.nus.edu.sg/">Dept. ISEM</a>, <a href="http://www.nus.edu.sg/">NUS</a>, Singapore, Dec. 2017 &ndash; Aug. 2018<br />
-Supervisors: <a href="https://www.isem.nus.edu.sg/staff/haskell/">Prof. William B. Haskell</a> and <a href="https://www.ece.nus.edu.sg/stfpage/vtan/index.htm">Prof. Vincent Y. F. Tan</a> </p>
-</li>
-<li><p><b>Research Engineer</b>, <a href="https://www.ece.nus.edu.sg/">Dept. of ECE</a> and <a href="https://www.isem.nus.edu.sg/">Dept. ISEM</a>, <a href="http://www.nus.edu.sg/">NUS</a>, Singapore, Sep. 2016 &ndash; Nov. 2017<br />
-Supervisors: <a href="https://www.ece.nus.edu.sg/stfpage/vtan/index.htm">Prof. Vincent Y. F. Tan</a> and <a href="https://www.isem.nus.edu.sg/staff/haskell/">Prof. William B. Haskell</a></p>
-</li>
-<li><p><b>Research Intern</b>, <a href="http://lions.epfl.ch/home/">Laboratory for Information and Inference Systems (LIONS)</a>, <a href="https://www.epfl.ch/">EPFL</a>, Switzerland, Jun. 2017 &ndash; Aug. 2017<br />
-Supervisor: <a href="http://lions.epfl.ch/volkan.cevher/">Prof. Volkan Cevher</a></p>
-</li>
-<li><p><b>Research Engineer</b>, <a href="https://www.ece.nus.edu.sg/">Dept. of ECE</a>, <a href="http://www.nus.edu.sg/">NUS</a>, Singapore, Jul. 2015 &ndash; Sep. 2016<br />
-Supervisors: <a href="https://www.ece.nus.edu.sg/stfpage/vtan/index.htm">Prof. Vincent Y. F. Tan</a> and <a href="https://www.isye.gatech.edu/users/huan-xu">Prof. Huan Xu</a></p>
-</li>
-<li><p><b>Research Intern</b>, <a href="http://www.i2r.a-star.edu.sg/hlt/">Department of Human Language Technology</a>, <a href="http://www.i2r.a-star.edu.sg/">Institute for Infocomm Research</a>, Singapore, May 2013 &ndash; Nov. 2013<br />
-Supervisors: Dr. Dong-Yan Huang and Dr. Yvonne S. W. Lee </p>
-</li>
-</ul>
-
-
-
 <h2>Publications</h2>
 
 <h3>Preprints</h3>
@@ -91,6 +67,23 @@ In Proc. of the 32nd AAAI Conference on Artificial Intelligence (AAAI'2018), New
 In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2017), Sydney, Australia, 2017. [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">Link</a>] [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">PDF</a>]<br /></p>
 </li>
 </ul>
+
+
+</p>
+</li>
+</ul>
+<h2>Professional Experiences</h2>
+<ul>
+<li><p><b>Research Intern</b>, <a href="http://petuum.com">Petuum</a>, Pittsburgh, PA, May. 2018 &ndash; Present<br />
+Mentor: <a href="http://www.cs.cmu.edu/~pengtaox/">Dr. Pengtao Xie</a></p>
+</li>
+<li><p><b>Research Assistant</b>, <a href="http://scse.ntu.edu.sg/Pages/Home.aspx">School of Computer Science and Engineering</a>, <a href="http://www.ntu.edu.sg/Pages/home.aspx">Nanyang Technological University (NTU)</a>, Singapore, Sep. 2016 &ndash; Aug. 2017<br />
+Supervisor: <a href="http://www.ntu.edu.sg/home/sinnopan/index.html">Prof. Sinno Jialin Pan</a> 
+</li>
+<li><p><b>Machine Learning Engineer</b>, <a href="https://www.wecash.net">Wecash</a>, Beijing, China, June 2015 &ndash; May. 2016<br />
+</li>
+</ul>
+
 
 
 </div>
