--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@ Email: yy8ms AT virginia DOT edu</a>.
 <p>I am a graduate student in <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia. I earned my B.S. from <a href="http://math.nju.edu.cn">Department of Mathematics</a> at Nanjing University in 2015. Previously, I was fortunate to work with  <a href="http://web.cs.ucla.edu/~qgu/">Quanquan Gu</a> at University of Virginia, and <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a> at Nanyang Technological University. My research interests broadly include topics in machine learning and optimization.
 </p>
 
+<h2>News</h2>
+
+<ul>
+	   <li>
+	   	[11/9/2018] We won <font color="#FF0000">the 1st place</font> in both Robust Model Track and Targeted Attack Track, as well as <font color="#FF0000">the 3rd place</font> in Untargeted Attack Track in <a href="https://www.crowdai.org/challenges/nips-2018-adversarial-vision-challenge-robust-model-track">NIPS 2018 : Adversarial Vision Challenge</a>. Congratulations to our team! More details will come soon. [<a href="https://medium.com/bethgelab/results-of-the-nips-adversarial-vision-challenge-2018-e1e21b690149">News Link</a>]
+       </li>
+</ul>
 
 <h2>Publications</h2>
 
