--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
@@ -7,7 +8,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Yaodong Yu</title>
 </head>
-<body>
+<body style="width: 800px; margin: 0 auto;">
 <div id="fwtitle">
 <div id="toptitle">
 <h1>Yaodong Yu</h1>
