--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Xiao Zhang*, <b>Yaodong Yu</b>*, Lingxiao Wang* and Quanquan Gu (*: equal contri
 <ul>
 <li><p><i>Third-order Smoothness Helps: Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
 <b>Yaodong Yu</b>*, Pan Xu* and Quanquan Gu (*: equal contribution).<br />
-In Proc. of the 32nd Conference on Advances in Neural Information Processing Systems (NIPS'2018), Montréal, Canada, 2018. [<a href="https://arxiv.org/abs/1712.06585">arXiv</a>][<a href="poster_FLASH.pdf">Poster</a>]<br /></p>
+In Proc. of the 32nd Conference on Advances in Neural Information Processing Systems (NIPS'2018), Montréal, Canada, 2018. [<a href="https://arxiv.org/abs/1712.06585">arXiv</a>][<a href="files_pdf/poster_FLASH.pdf">Poster</a>]<br /></p>
 </li>
 </ul>
 <ul>
