--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Email: yy8ms AT virginia DOT edu</a>.
 
 <ul>
 	   <li>
-	   	[11/9/2018] We won <font color="#FF0000">the 1st place</font> in both Robust Model Track and Targeted Attack Track, as well as <font color="#FF0000">the 3rd place</font> in Untargeted Attack Track in <a href="https://www.crowdai.org/challenges/nips-2018-adversarial-vision-challenge-robust-model-track">NIPS 2018 : Adversarial Vision Challenge</a>. Congratulations to our team! More details will come soon. [<a href="https://medium.com/bethgelab/results-of-the-nips-adversarial-vision-challenge-2018-e1e21b690149">News Link</a>]
+	   	[11/9/2018] We won <font color="#FF0000">the 1st place</font> in both Robust Model Track and Targeted Attack Track, as well as <font color="#FF0000">the 3rd place</font> in Untargeted Attack Track in <a href="https://www.crowdai.org/challenges/nips-2018-adversarial-vision-challenge-robust-model-track">NeurIPS 2018 : Adversarial Vision Challenge</a>. Congratulations to our team! More details will come soon. [<a href="https://medium.com/bethgelab/results-of-the-nips-adversarial-vision-challenge-2018-e1e21b690149">News Link</a>]
        </li>
 </ul>
 
@@ -54,7 +54,7 @@ Xiao Zhang*, <b>Yaodong Yu</b>*, Lingxiao Wang* and Quanquan Gu (*: equal contri
 <ul>
 <li><p><i>Third-order Smoothness Helps: Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
 <b>Yaodong Yu</b>*, Pan Xu* and Quanquan Gu (*: equal contribution).<br />
-In Proc. of the 32nd Conference on Advances in Neural Information Processing Systems (NIPS'2018), Montréal, Canada, 2018. [<a href="https://arxiv.org/abs/1712.06585">arXiv</a>][<a href="files_pdf/poster_FLASH.pdf">Poster</a>]<br /></p>
+In Proc. of the 32nd Conference on Advances in Neural Information Processing Systems (NeurIPS'2018), Montréal, Canada, 2018. [<a href="http://papers.nips.cc/paper/7704-third-order-smoothness-helps-faster-stochastic-optimization-algorithms-for-finding-local-minima">Link</a>] [<a href="http://papers.nips.cc/paper/7704-third-order-smoothness-helps-faster-stochastic-optimization-algorithms-for-finding-local-minima.pdf">PDF</a>][<a href="files_pdf/poster_FLASH.pdf">Poster</a>]<br /></p>
 </li>
 </ul>
 <ul>
