--- a/index.html
+++ b/index.html
@@ -44,13 +44,14 @@ Email: yy8ms AT virginia DOT edu</a>.
 <b>Yaodong Yu</b>*, Difan Zou* and Quanquan Gu (*: equal contribution). arXiv:1712.03950, 2017. [<a href="https://arxiv.org/abs/1712.03950">arXiv</a>]<br /></p>
 </li>
 </ul>
-<ul>
-<li><p><i>Learning One-hidden-layer ReLU Networks via Gradient Descent</i>.<br /> 
-Xiao Zhang*, <b>Yaodong Yu</b>*, Lingxiao Wang* and Quanquan Gu (*: equal contribution). arXiv:1806.07808, 2018. [<a href="https://arxiv.org/abs/1806.07808">arXiv</a>]<br /></p>
-</li>
-</ul>
 
 <h3>Conference Proceedings</h3>
+<ul>
+<li><p><i>Learning One-hidden-layer ReLU Networks via Gradient Descent</i>.<br /> 
+Xiao Zhang*, <b>Yaodong Yu</b>*, Lingxiao Wang* and Quanquan Gu (*: equal contribution). <br /> 
+In Proc. of the 22nd International Conference on Artificial Intelligence and Statistics (AISTATS'2019), Naha, Okinawa, Japan, 2019. [<a href="https://arxiv.org/abs/1806.07808">arXiv</a>]
+</li>
+</ul>
 <ul>
 <li><p><i>Third-order Smoothness Helps: Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
 <b>Yaodong Yu</b>*, Pan Xu* and Quanquan Gu (*: equal contribution).<br />
