--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@ Email: yy8ms AT virginia DOT edu</a>.
 
 <ul>
 	   <li>
-	   	[11/9/2018] We won <font color="#FF0000">the 1st place</font> in both Robust Model Track and Targeted Attack Track, as well as <font color="#FF0000">the 3rd place</font> in Untargeted Attack Track in <a href="https://www.crowdai.org/challenges/nips-2018-adversarial-vision-challenge-robust-model-track">NeurIPS 2018 : Adversarial Vision Challenge</a>. Congratulations to our team! More details will come soon. [<a href="https://medium.com/bethgelab/results-of-the-nips-adversarial-vision-challenge-2018-e1e21b690149">News Link</a>]
+	   	[11/9/2018] We won the <b>1st place</b> in both Robust Model Track and Targeted Attack Track, as well as <b>the 3rd place</b> in Untargeted Attack Track in <a href="https://www.crowdai.org/challenges/nips-2018-adversarial-vision-challenge-robust-model-track">NeurIPS 2018 : Adversarial Vision Challenge</a> [<a href="https://medium.com/bethgelab/results-of-the-nips-adversarial-vision-challenge-2018-e1e21b690149">News Link</a>]. Congratulations to our team! Please check our new method <b>TRADES</b> [<a href="https://arxiv.org/abs/1901.08573">paper</a>] [<a href="https://github.com/yaodongyu/TRADES">code</a>].
        </li>
 </ul>
 
 <h2>Publications</h2>
 
 <h3>Preprints</h3>
+<ul>
+<li><p><i>Theoretically Principled Trade-off between Robustness and Accuracy</i>.<br /> Hongyang Zhang, <b>Yaodong Yu</b>, Jiantao Jiao, Eric P. Xing, Laurent El Ghaoui and Michael I. Jordan. arXiv:1901.08573, 2019. [<a href="https://arxiv.org/abs/1901.08573">arXiv</a>] [<a href="https://github.com/yaodongyu/TRADES">code</a>] <br /></p>
+</li>
+</ul>
 <ul>
 <li><p><i>Saving Gradient and Negative Curvature Computations: Finding Local Minima More Efficiently</i>.<br /> 
 <b>Yaodong Yu</b>*, Difan Zou* and Quanquan Gu (*: equal contribution). arXiv:1712.03950, 2017. [<a href="https://arxiv.org/abs/1712.03950">arXiv</a>]<br /></p>
@@ -55,7 +59,7 @@ In Proc. of the 22nd International Conference on Artificial Intelligence and Sta
 <ul>
 <li><p><i>Third-order Smoothness Helps: Faster Stochastic Optimization Algorithms for Finding Local Minima</i>.<br /> 
 <b>Yaodong Yu</b>*, Pan Xu* and Quanquan Gu (*: equal contribution).<br />
-In Proc. of the 32nd Conference on Advances in Neural Information Processing Systems (NeurIPS'2018), Montréal, Canada, 2018. [<a href="http://papers.nips.cc/paper/7704-third-order-smoothness-helps-faster-stochastic-optimization-algorithms-for-finding-local-minima">Link</a>] [<a href="http://papers.nips.cc/paper/7704-third-order-smoothness-helps-faster-stochastic-optimization-algorithms-for-finding-local-minima.pdf">PDF</a>][<a href="files_pdf/poster_FLASH.pdf">Poster</a>]<br /></p>
+In Proc. of the 32nd Conference on Advances in Neural Information Processing Systems (NeurIPS'2018), Montréal, Canada, 2018. [<a href="http://papers.nips.cc/paper/7704-third-order-smoothness-helps-faster-stochastic-optimization-algorithms-for-finding-local-minima">Link</a>] [<a href="http://papers.nips.cc/paper/7704-third-order-smoothness-helps-faster-stochastic-optimization-algorithms-for-finding-local-minima.pdf">PDF</a>][<a href="files_pdf/poster_FLASH.pdf">Poster</a>] <br /></p>
 </li>
 </ul>
 <ul>
@@ -83,7 +87,7 @@ In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2
 </ul>
 <h2>Professional Experiences</h2>
 <ul>
-<li><p><b>Research Intern</b>, <a href="http://petuum.com">Petuum</a>, Pittsburgh, PA, May. 2018 &ndash; Present<br />
+<li><p><b>Research Intern</b>, <a href="http://petuum.com">Petuum</a>, Pittsburgh, PA, May. 2018 &ndash; Dec. 2018<br />
 </li>
 <li><p><b>Research Assistant</b>, <a href="http://scse.ntu.edu.sg/Pages/Home.aspx">School of Computer Science and Engineering</a>, <a href="http://www.ntu.edu.sg/Pages/home.aspx">Nanyang Technological University (NTU)</a>, Singapore, Sep. 2016 &ndash; Aug. 2017<br />
 </li>
