--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
@@ -18,14 +17,15 @@
 <table class="imgtable"><tr><td>
 <img src="photo_me.jpg" alt="photo_me" width="300px" height="200px" />&nbsp;</td>
 <td align="left"><p>Graduate Student<br />
-<a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia.</p>
-<p>Rice Hall, Charlottesville, VA 22904.<br />  
-Email: yy8ms AT virginia DOT edu</a>.
+EECS Department, University of California, Berkeley.</p>
+<p>Cory Hall, Berkeley, CA 94720.<br />  
+Email: yyu AT eecs DOT berkeley DOT edu</a>.
 
 </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a graduate student in <a href="https://engineering.virginia.edu/departments/computer-science">Department of Computer Science</a>, University of Virginia. I earned my B.S. from <a href="http://math.nju.edu.cn">Department of Mathematics</a> at Nanjing University in 2015. Previously, I was fortunate to work with  <a href="http://web.cs.ucla.edu/~qgu/">Quanquan Gu</a> at University of Virginia, and <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a> at Nanyang Technological University. My research interests broadly include topics in machine learning and optimization.
+<p>I am a first year PhD student in the EECS department at the University of California, Berkeley. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia. Previously, I was fortunate to work with  <a href="http://web.cs.ucla.edu/~qgu/">Quanquan Gu</a> at University of Virginia, and <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a> at Nanyang Technological University. 
+<!-- My research interests broadly include topics in machine learning and optimization. -->
 </p>
 
 <h2>News</h2>
@@ -38,22 +38,22 @@ Email: yy8ms AT virginia DOT edu</a>.
 
 <h2>Publications</h2>
 
-<h3>Preprints</h3>
-<ul>
-<li><p><i>Theoretically Principled Trade-off between Robustness and Accuracy</i>.<br /> Hongyang Zhang, <b>Yaodong Yu</b>, Jiantao Jiao, Eric P. Xing, Laurent El Ghaoui and Michael I. Jordan. arXiv:1901.08573, 2019. [<a href="https://arxiv.org/abs/1901.08573">arXiv</a>] [<a href="https://github.com/yaodongyu/TRADES">code</a>] <br /></p>
-</li>
-</ul>
+<!-- <h3>Preprints</h3>
 <ul>
 <li><p><i>Saving Gradient and Negative Curvature Computations: Finding Local Minima More Efficiently</i>.<br /> 
 <b>Yaodong Yu</b>*, Difan Zou* and Quanquan Gu (*: equal contribution). arXiv:1712.03950, 2017. [<a href="https://arxiv.org/abs/1712.03950">arXiv</a>]<br /></p>
 </li>
-</ul>
+</ul> -->
 
 <h3>Conference Proceedings</h3>
 <ul>
+<li><p><i>Theoretically Principled Trade-off between Robustness and Accuracy</i>.<br /> Hongyang Zhang, <b>Yaodong Yu</b>, Jiantao Jiao, Eric P. Xing, Laurent El Ghaoui and Michael I. Jordan. In Proc. of the 36th International Conference on Machine Learning (ICML'2019), Long Beach, California, USA, 2019. [<a href="https://arxiv.org/abs/1901.08573">arXiv</a>] [<a href="http://proceedings.mlr.press/v97/zhang19p">Link</a>] [<a href="http://proceedings.mlr.press/v97/zhang19p/zhang19p.pdf">PDF</a>] [<a href="https://github.com/yaodongyu/TRADES">code</a>] <br /></p>
+</li>
+</ul>
+<ul>
 <li><p><i>Learning One-hidden-layer ReLU Networks via Gradient Descent</i>.<br /> 
 Xiao Zhang*, <b>Yaodong Yu</b>*, Lingxiao Wang* and Quanquan Gu (*: equal contribution). <br /> 
-In Proc. of the 22nd International Conference on Artificial Intelligence and Statistics (AISTATS'2019), Naha, Okinawa, Japan, 2019. [<a href="https://arxiv.org/abs/1806.07808">arXiv</a>]
+In Proc. of the 22nd International Conference on Artificial Intelligence and Statistics (AISTATS'2019), Naha, Okinawa, Japan, 2019. [<a href="http://proceedings.mlr.press/v89/zhang19g">Link</a>] [<a href="http://proceedings.mlr.press/v89/zhang19g/zhang19g.pdf">PDF</a>]
 </li>
 </ul>
 <ul>
