--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Email: yyu AT eecs DOT berkeley DOT edu</a>.
 </td></tr></table>
 <h2>About me</h2>
 <p>I am a first year PhD student in the EECS department at the University of California, Berkeley. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia. 
-<!-- Previously, I was fortunate to work with  <a href="http://web.cs.ucla.edu/~qgu/">Quanquan Gu</a> at University of Virginia, and <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a> at Nanyang Technological University.  -->
+<!-- Previously, I was fortunate to work with <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a> at Nanyang Technological University.  -->
 <!-- My research interests broadly include topics in machine learning and optimization. -->
 </p>
 
