--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@ Email: yyu AT eecs DOT berkeley DOT edu</a>.
 <!-- My research interests broadly include topics in machine learning and optimization. -->
 </p>
 
-<h2>News</h2>
+<!-- <h2>News</h2>
 
 <ul>
 	   <li>
 	   	[11/9/2018] We won the <b>1st place</b> in both Robust Model Track and Targeted Attack Track, as well as <b>the 3rd place</b> in Untargeted Attack Track in <a href="https://www.crowdai.org/challenges/nips-2018-adversarial-vision-challenge-robust-model-track">NeurIPS 2018 : Adversarial Vision Challenge</a> [<a href="https://medium.com/bethgelab/results-of-the-nips-adversarial-vision-challenge-2018-e1e21b690149">News Link</a>]. Congratulations to our team! Please check our new method <b>TRADES</b> [<a href="https://arxiv.org/abs/1901.08573">paper</a>] [<a href="https://github.com/yaodongyu/TRADES">code</a>].
        </li>
-</ul>
+</ul> -->
 
 <h2>Publications</h2>
 
