--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
 </div>
 <div id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="photo_me.jpg" alt="photo_me" width="300px" height="200px" />&nbsp;</td>
+<img src="photo_me_2.jpg" alt="photo_me" width="190px" height="200px" />&nbsp;</td>
 <td align="left"><p>Graduate Student<br />
 EECS Department, University of California, Berkeley.</p>
-<p>Cory Hall, Berkeley, CA 94720.<br />  
+<p>7th floor, Sutardja Dai Hall, Berkeley, CA 94720.<br />  
 Email: yyu AT eecs DOT berkeley DOT edu</a>.
 
 </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a first year PhD student in the EECS department at the University of California, Berkeley. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia. 
+<p>I am a third-year PhD student in the EECS department at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a> and <a href="http://people.eecs.berkeley.edu/~yima/">Yi Ma</a>. I obtained my B.S. from the Department of Mathematics at Nanjing University, and my M.S. from the Department of Computer Science</a>, University of Virginia. 
 <!-- Previously, I was fortunate to work with <a href="http://www.ntu.edu.sg/home/sinnopan/">Sinno Jialin Pan</a> at Nanyang Technological University.  -->
-<!-- My research interests broadly include topics in machine learning and optimization. -->
+
+</p>
+My research interests include topics in machine learning and optimization. My goal is to make machine learning systems more robust.
 </p>
 
 <!-- <h2>News</h2>
@@ -37,7 +39,7 @@ Email: yyu AT eecs DOT berkeley DOT edu</a>.
        </li>
 </ul> -->
 
-<h2>Publications</h2>
+<h2>Publications [<a href="https://scholar.google.com/citations?user=bZ9oyW8AAAAJ&hl=zh-CN&oi=ao">Google Scholar</a>]</h2> 
 
 <!-- <h3>Preprints</h3>
 <ul>
@@ -46,7 +48,7 @@ Email: yyu AT eecs DOT berkeley DOT edu</a>.
 </li>
 </ul> -->
 
-<h3>Conference Proceedings</h3>
+<!-- <h3>Conference Proceedings</h3>
 <ul>
 <li><p><i>Theoretically Principled Trade-off between Robustness and Accuracy</i>.<br /> Hongyang Zhang, <b>Yaodong Yu</b>, Jiantao Jiao, Eric P. Xing, Laurent El Ghaoui and Michael I. Jordan. In Proc. of the 36th International Conference on Machine Learning (ICML'2019), Long Beach, California, USA, 2019. [<a href="https://arxiv.org/abs/1901.08573">arXiv</a>] [<a href="http://proceedings.mlr.press/v97/zhang19p">Link</a>] [<a href="http://proceedings.mlr.press/v97/zhang19p/zhang19p.pdf">PDF</a>] [<a href="https://github.com/yaodongyu/TRADES">code</a>] <br /></p>
 </li>
@@ -80,7 +82,7 @@ In Proc. of the 32nd AAAI Conference on Artificial Intelligence (AAAI'2018), New
 <b>Yaodong Yu</b>*, Sulin Liu* and Sinno Jialin Pan (*: equal contribution).<br />
 In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2017), Sydney, Australia, 2017. [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">Link</a>] [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">PDF</a>]<br /></p>
 </li>
-</ul>
+</ul> -->
 
 
 </p>
@@ -88,6 +90,8 @@ In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2
 </ul>
 <h2>Professional Experiences</h2>
 <ul>
+<li><p><b>Research Intern</b>, <a href="https://research.google">Google Research</a>, Remote, May. 2021 &ndash; Aug. 2021<br />
+</li>
 <li><p><b>Research Intern</b>, <a href="http://petuum.com">Petuum</a>, Pittsburgh, PA, May. 2018 &ndash; Dec. 2018<br />
 </li>
 <li><p><b>Research Assistant</b>, <a href="http://scse.ntu.edu.sg/Pages/Home.aspx">School of Computer Science and Engineering</a>, <a href="http://www.ntu.edu.sg/Pages/home.aspx">Nanyang Technological University (NTU)</a>, Singapore, Sep. 2016 &ndash; Aug. 2017<br />
