--- a/index.html
+++ b/index.html
@@ -48,7 +48,35 @@ My research interests include topics in machine learning and optimization. My go
 </li>
 </ul> -->
 
-<!-- <h3>Conference Proceedings</h3>
+<!-- <h3>Conference Proceedings</h3> -->
+<ul>
+<li><p><i>Fast distributionally robust learning with variance reduced min-max optimization</i>.<br />
+<b>Yaodong Yu</b>*, Tianyi Lin*, Eric Mazumdar*, Michael I. Jordan Michael I. Jordan (*: equal contribution). <br />  
+In Proc. of the 25nd of the International Conference on Artificial Intelligence and Statistics (AISTATS'2022), 2022. [<a href="https://arxiv.org/abs/2104.13326">arXiv</a>] [<a href="https://arxiv.org/pdf/2104.13326.pdf">PDF</a>] <br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>On the Convergence of Stochastic Extragradient for Bilinear Games with Restarted Iteration Averaging</i>.<br />
+Chris Junchi Li*, <b>Yaodong Yu</b>*, Nicolas Loizou, Gauthier Gidel, Yi Ma, Nicolas Le Roux, Michael I. Jordan (*: equal contribution). <br />  
+In Proc. of the 25nd of the International Conference on Artificial Intelligence and Statistics (AISTATS'2022), 2022. [<a href="https://arxiv.org/abs/2107.00464">arXiv</a>] [<a href="https://arxiv.org/pdf/2107.00464.pdf">PDF</a>] <br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>Adversarial Robustness of Stabilized NeuralODEs Might be from Obfuscated Gradients</i>.<br />  Yifei Huang, <b>Yaodong Yu</b>, Hongyang Zhang, Yi Ma, and Yuan Yao.<br />  Mathematical and Scientific Machine Learning (MSML'2021), 2021. [<a href="https://arxiv.org/abs/2009.13145">arXiv</a>] [<a href="https://arxiv.org/pdf/2009.13145.pdf">PDF</a>] [<a href="https://github.com/yao-lab/SONet">code</a>] <br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>Learning Diverse and Discriminative Representations via the Principle of Maximal Coding Rate Reduction</i>.<br />  <b>Yaodong Yu</b>*, Kwan Ho Ryan Chan*, Chong You, Chaobing Song, Yi Ma (*: equal contribution).<br />  In Proc. of the 34th Conference on Advances in Neural Information Processing Systems (NeurIPS'2020), 2020. [<a href="https://arxiv.org/abs/2006.08558">arXiv</a>] [<a href="https://proceedings.neurips.cc/paper/2020/hash/6ad4174eba19ecb5fed17411a34ff5e6-Abstract.html">Link</a>] [<a href="https://proceedings.neurips.cc/paper/2020/file/6ad4174eba19ecb5fed17411a34ff5e6-Paper.pdf">PDF</a>] [<a href="https://github.com/ryanchankh/mcr2">code</a>] <br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>Boundary Thickness and Robustness in Learning Models</i>.<br /> Yaoqing Yang, Rajiv Khanna, <b>Yaodong Yu</b>, Amir Gholami, Kurt Keutzer, Joseph Gonzalez, Kannan Ramchandran, and Michael W Mahoney.<br />  In Proc. of the 34th Conference on Advances in Neural Information Processing Systems (NeurIPS'2020), 2020. [<a href="https://arxiv.org/abs/2007.05086">arXiv</a>] [<a href="https://papers.nips.cc/paper/2020/hash/44e76e99b5e194377e955b13fb12f630-Abstract.html">Link</a>] [<a href="https://proceedings.neurips.cc/paper/2020/file/44e76e99b5e194377e955b13fb12f630-Paper.pdf">PDF</a>] [<a href="https://github.com/nsfzyzz/boundary_thickness">code</a>] <br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>Rethinking Bias-Variance Trade-off for Generalization of Neural Networks</i>.<br /> Zitong Yang*, <b>Yaodong Yu</b>*, Chong You, Jacob Steinhardt, and Yi Ma (*: equal contribution).<br />  In Proc. of the 37th International Conference on Machine Learning (ICML'2020), 2020. [<a href="https://arxiv.org/abs/2002.11328">arXiv</a>] [<a href="https://proceedings.mlr.press/v119/yang20j">Link</a>] [<a href="http://proceedings.mlr.press/v119/yang20j/yang20j.pdf">PDF</a>] [<a href="https://github.com/yaodongyu/Rethink-BiasVariance-Tradeoff">code</a>] <br /></p>
+</li>
+</ul>
 <ul>
 <li><p><i>Theoretically Principled Trade-off between Robustness and Accuracy</i>.<br /> Hongyang Zhang, <b>Yaodong Yu</b>, Jiantao Jiao, Eric P. Xing, Laurent El Ghaoui and Michael I. Jordan. In Proc. of the 36th International Conference on Machine Learning (ICML'2019), Long Beach, California, USA, 2019. [<a href="https://arxiv.org/abs/1901.08573">arXiv</a>] [<a href="http://proceedings.mlr.press/v97/zhang19p">Link</a>] [<a href="http://proceedings.mlr.press/v97/zhang19p/zhang19p.pdf">PDF</a>] [<a href="https://github.com/yaodongyu/TRADES">code</a>] <br /></p>
 </li>
@@ -82,7 +110,7 @@ In Proc. of the 32nd AAAI Conference on Artificial Intelligence (AAAI'2018), New
 <b>Yaodong Yu</b>*, Sulin Liu* and Sinno Jialin Pan (*: equal contribution).<br />
 In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2017), Sydney, Australia, 2017. [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">Link</a>] [<a href="http://auai.org/uai2017/proceedings/papers/286.pdf">PDF</a>]<br /></p>
 </li>
-</ul> -->
+</ul>
 
 
 </p>
