--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Yaodong Yu</title>
 </head>
-<body style="width: 800px; margin: 0 auto;">
+<body style="width: 1000px; margin: 0 auto;">
 <div id="fwtitle">
 <div id="toptitle">
 <h1>Yaodong Yu</h1>
@@ -49,6 +49,12 @@ My research interests include topics in machine learning and optimization. My go
 </ul> -->
 
 <!-- <h3>Conference Proceedings</h3> -->
+<ul>
+<li><p><i>ReduNet: A White-box Deep Network from the Principle of Maximizing Rate Reduction</i>.<br />
+Kwan Ho Ryan Chan*, <b>Yaodong Yu</b>*, Chong You*, Haozhi Qi, John Wright, Yi Ma (*: equal contribution). <br />  
+Journal of Machine Learning Research (JMLR), 2022. [<a href="https://arxiv.org/abs/2105.10446">arXiv</a>] [<a href="https://arxiv.org/pdf/2105.10446.pdf">PDF</a>] <br /></p>
+</li>
+</ul>
 <ul>
 <li><p><i>Fast distributionally robust learning with variance reduced min-max optimization</i>.<br />
 <b>Yaodong Yu</b>*, Tianyi Lin*, Eric Mazumdar*, Michael I. Jordan Michael I. Jordan (*: equal contribution). <br />  
