--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Journal of Machine Learning Research (JMLR), 2022. [<a href="https://arxiv.org/a
 </ul>
 <ul>
 <li><p><i>Fast distributionally robust learning with variance reduced min-max optimization</i>.<br />
-<b>Yaodong Yu</b>*, Tianyi Lin*, Eric Mazumdar*, Michael I. Jordan Michael I. Jordan (*: equal contribution). <br />  
+<b>Yaodong Yu</b>*, Tianyi Lin*, Eric Mazumdar*, Michael I. Jordan (*: equal contribution). <br />  
 In Proc. of the 25nd of the International Conference on Artificial Intelligence and Statistics (AISTATS'2022), 2022. [<a href="https://arxiv.org/abs/2104.13326">arXiv</a>] [<a href="https://arxiv.org/pdf/2104.13326.pdf">PDF</a>] <br /></p>
 </li>
 </ul>
