--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@ My research interests include topics in machine learning and optimization. My go
 
 <!-- <h3>Conference Proceedings</h3> -->
 <ul>
+<li><p><i>Robust Calibration with Multi-domain Temperature Scaling</i>.<br />
+<b>Yaodong Yu</b>, Stephen Bates, Yi Ma, Michael I Jordan. <br />  
+In Proc. of the 36th Conference on Advances in Neural Information Processing Systems (NeurIPS'2022), 2022. [<a href="https://arxiv.org/abs/2206.02757">arXiv</a>] [<a href="https://github.com/yaodongyu/MDTS">code</a>] <br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>TCT: Convexifying Federated Learning using Bootstrapped Neural Tangent Kernels</i>.<br />
+<b>Yaodong Yu</b>, Alexander Wei, Sai Praneeth Karimireddy, Yi Ma, Michael I. Jordan. <br />  
+In Proc. of the 36th Conference on Advances in Neural Information Processing Systems (NeurIPS'2022), 2022. [<a href="https://arxiv.org/abs/2207.06343">arXiv</a>] [<a href="https://github.com/yaodongyu/TCT">code</a>] <br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>What You See is What You Get: Distributional Generalization for Algorithm Design in Deep Learning</i>.<br />
+Bogdan Kulynych*, Yao-Yuan Yang*, <b>Yaodong Yu</b>, Jarosław Błasiok, Preetum Nakkiran. <br />  
+In Proc. of the 36th Conference on Advances in Neural Information Processing Systems (NeurIPS'2022), 2022. [<a href="https://arxiv.org/abs/2204.03230">arXiv</a>] [<a href="https://github.com/yangarbiter/dp-dg">code</a>] <br /></p>
+</li>
+</ul>
+<ul>
+<li><p><i>Conditional Supervised Contrastive Learning for Fair Text Classification</i>.<br />
+Jianfeng Chi, William Shand, <b>Yaodong Yu</b>, Kai-Wei Chang, Han Zhao and Yuan Tian. <br />  
+In Proceedings of the 2022 Empirical Methods in Natural Language Processing (EMNLP'2022 Findings), 2022. [<a href="https://arxiv.org/abs/2205.11485">arXiv</a>] <br /></p>
+</li>
+</ul>
+<ul>
 <li><p><i>Predicting Out-of-Distribution Error with the Projection Norm</i>.<br />
 <b>Yaodong Yu</b>*, Zitong Yang*, Alexander Wei, Yi Ma, Jacob Steinhardt. <br />  
 In Proc. of the 39th International Conference on Machine Learning (ICML'2022), 2022. [<a href="https://proceedings.mlr.press/v162/yu22i.html">Link</a>] [<a href="https://proceedings.mlr.press/v162/yu22i/yu22i.pdf">PDF</a>] [<a href="https://github.com/yaodongyu/ProjNorm">code</a>] <br /></p>
