--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@ In Proc. of the 33rd Conference on Uncertainty in Artificial Intelligence (UAI'2
 </ul>
 <h2>Professional Experiences</h2>
 <ul>
-<li><p><b>Research Intern</b>, <a href="https://ai.facebook.com">Meta AI</a>, San Francisco, May. 2022 &ndash; Aug. 2022<br />
+<li><p><b>Research Intern</b>, <a href="https://ai.facebook.com">FAIR</a>, San Francisco, Oct. 2022 &ndash; Present<br />
+</li>
+<li><p><b>Research Intern</b>, <a href="https://ai.facebook.com">Meta AI</a>, San Francisco, May. 2022 &ndash; Oct. 2022<br />
 </li>
 <li><p><b>Research Intern</b>, <a href="https://research.google">Google Research</a>, Remote, May. 2021 &ndash; Aug. 2021<br />
 </li>
