--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ My research interests include topics in machine learning and optimization. My go
 <!-- <h3>Conference Proceedings</h3> -->
 <ul>
 <li><p><i>Robust Calibration with Multi-domain Temperature Scaling</i>.<br />
-<b>Yaodong Yu</b>, Stephen Bates, Yi Ma, Michael I Jordan. <br />  
-In Proc. of the 36th Conference on Advances in Neural Information Processing Systems (NeurIPS'2022), 2022. [<a href="https://arxiv.org/abs/2206.02757">arXiv</a>] [<a href="https://github.com/yaodongyu/MDTS">code</a>] <br /></p>
+<b>Yaodong Yu</b>, Stephen Bates, Yi Ma, Michael I. Jordan. <br />  
+In Proc. of the 36th Conference on Advances in Neural Information Processing Systems (NeurIPS'2022), 2022. [<a href="https://arxiv.org/abs/2206.02757">arXiv</a>] <br /></p>
 </li>
 </ul>
 <ul>
